--- a/static/index.html
+++ b/static/index.html
@@ -5,15 +5,23 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Language" content="en">
-  <link rel="stylesheet" href="static/css/bootstrap.css"></link>
-  <link rel="stylesheet" href="static/css/font-awesome.css"></link>
-  <link rel="stylesheet" href="static/css/app.css"></link>
-  <link rel="icon" type="image/x-icon" href="static/img/icon.ico" />
-  <script type="text/javascript" src="static/js/jquery.js"></script>
-  <script type="text/javascript" src="static/js/ace.js"></script>
-  <script type="text/javascript" src="static/js/ace-pgsql.js"></script>
-  <script type="text/javascript" src="static/js/bootstrap-contextmenu.js"></script>
-  <script type="text/javascript" src="static/js/app.js"></script>
+  <link rel="stylesheet" href="https://storage.googleapis.com/codegroundscript-pgweb/static/css/bootstrap.css"></link>
+  <link rel="stylesheet" href="https://storage.googleapis.com/codegroundscript-pgweb/static/css/font-awesome.css"></link>
+  <link rel="stylesheet" href="https://storage.googleapis.com/codegroundscript-pgweb/static/css/app.css"></link>
+  <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/codegroundscript-pgweb/static/img/icon.ico" />
+  <script type="text/javascript" src="https://storage.googleapis.com/codegroundscript-pgweb/static/js/jquery.js"></script>
+  <script type="text/javascript" src="https://storage.googleapis.com/codegroundscript-pgweb/static/js/ace.js"></script>
+  <script type="text/javascript" src="https://storage.googleapis.com/codegroundscript-pgweb/static/js/ace-pgsql.js"></script>
+  <script type="text/javascript" src="https://storage.googleapis.com/codegroundscript-pgweb/static/js/bootstrap-contextmenu.js"></script>
+  <script type="text/javascript" src="https://storage.googleapis.com/codegroundscript-pgweb/static/js/app.js"></script>
+  <style type="text/css">
+  	.my-style {
+	    padding: 10px;
+	    margin: 0px;
+	    border: 1px solid transparent;
+	    border-radius: 4px;
+	}
+  </style>
 </head>
 <body>
   <div id="main">
@@ -24,8 +32,8 @@
         <li id="table_indexes">Indexes</li>
         <li id="table_constraints">Constraints</li>
         <li id="table_query" class="selected">SQL Query</li>
-        <li id="table_history">History</li>
-        <li id="table_activity">Activity</li>
+       <!--  <li id="table_history">History</li>
+        <li id="table_activity">Activity</li> -->
         <li id="table_connection">Connection</li>
       </ul>
 
@@ -59,16 +67,22 @@
     <div id="body">
       <div id="input">
         <div class="wrapper">
+        <div class="alert alert-danger my-style" role="alert">
+		  <span class="sr-only">Error:</span>
+		  <strong>Note:</strong> Never do "select * from table" as it may not load if table has too many rows alway keep your query to limit using "limit sql keyword".
+		  <br>
+		  For eg: select * from table limit 100
+		</div>
           <div id="custom_query"></div>
           <div class="actions">
             <input type="button" id="run" value="Run Query" class="btn btn-sm btn-primary" />
             <input type="button" id="explain" value="Explain Query" class="btn btn-sm btn-default" />
             <div id="query_progress">Please wait, query is executing...</div>
-            <div class="pull-right">
+            <!-- <div class="pull-right">
               <input type="button" id="json" value="JSON" class="btn btn-sm btn-default" />
               <input type="button" id="csv" value="CSV" class="btn btn-sm btn-default" />
               <input type="button" id="xml" value="XML" class="btn btn-sm btn-default" />
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -225,7 +239,7 @@
         <div class="form-group">
           <div class="col-sm-12">
             <button type="submit" class="btn btn-block btn-primary open-connection">Connect</button>
-            <button type="button" id="close_connection_window" class="btn btn-block btn-default">Cancel</button>
+            <button type="reset" id="close_connection_window" class="btn btn-block btn-default">Cancel</button>
           </div>
         </div>
       </form>
